--- a/.env.examplee
+++ b/.env.examplee
@@ -11,4 +11,8 @@ NAGAD_NUMBER=01752577215
 BINANCE_ID=1204467303
 CRYPTO_ADDRESS=0xb44c852dde78eb5c1c259ca149031f84a5f86cf8
 
+MIN_WITHDRAW_BDT=50
+WITHDRAW_FEE_PCT=5
+USD_RATE_BDT=115
+
 FIREBASE_SERVICE_ACCOUNT=serviceAccountKey.json
